# rpg-town

./: .gitignore  CMakeLists.txt  COPYING  InteractionObject.cpp  InteractionObject.h  README.md  build.bat  config.h.in  outsourcing.txt
documentation/: Functions of town.docx  Structures in town.docx
include/: AnimatedSprite.h  Animation.h  AnimationType.h  Building.h  Button.h  ButtonFunctionConnector.h  ButtonsHandler.h  Component.h  Entity.h  EntityContainer.h  FunctionsCallback.h  Game.h  IngameMode.h  MenuState.h  PlayerCharacter.h  State.h  StateMachine.h  StateStack.h  StateTransition.h  StateUpdater.h  StatesMachine.h  Structure.h  StructureMold.h  StructureType.h  TextButton.h  TextureHolder.h  Town.h  ViewManager.h
include/Components/: ClickableComponent.h  SpriteComponent.h  TextComponent.h
include/HUD/: BuildingIcon.h  Button.h  EntityButton.h  TextButton.h  WNDBuild.h  WNDMenu.h  Window.h
include/UI/: Button.h
include/gui/: Button.h  TextButton.h  TextButtonFactory.h  Window.h
include/states/: GameState.h  IntroState.h  MenuState.h
src/: AnimatedSprite.cpp  Animation.cpp  Building.cpp  Button.cpp  ButtonFunctionConnector.cpp  ButtonsHandler.cpp  Entity.cpp  EntityContainer.cpp  EntityContainer.h  FunctionsCallback.cpp  Game.cpp  IngameMode.cpp  MenuState.cpp  PlayerCharacter.cpp  State.cpp  StateMachine.cpp  StateStack.cpp  StateUpdater.cpp  StatesMachine.cpp  Structure.cpp  StructureMold.cpp  TextButton.cpp  TextureHolder.cpp  Town.cpp  ViewManager.cpp  _main.cpp  main.cpp
src/Components/: ClickableComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
src/HUD/: BuildingIcon.cpp  Button.cpp  EntityButton.cpp  TextButton.cpp  WNDBuild.cpp  WNDMenu.cpp  Window.cpp
src/States/: GameState.cpp  IntroState.cpp  MenuState.cpp
src/UI/: Button.cpp
src/gui/: Button.cpp  TextButton.cpp  TextButtonFactory.cpp  Window.cpp
